getByDoctor api modification and add some field and cancelReason api and add consultancyFee in getAllDoctorBySpeciality api